#wip on https://github.com/typelevel/frameless/issues/279